@@ -83,6 +83,7 @@ exempt of errors.
 - Titus Winters
 - Tom (tomdev2)
 - Uwe Kleine-König
+- Vladimir Fedoseev (va-dos)
 - wangyanhai
 - Yoichi Nakayama (yoichi)
 - zephyrus (zephyrus00jp)
